--- a/electronic/cubemx/cubemx.ioc
+++ b/electronic/cubemx/cubemx.ioc
@@ -17,6 +17,7 @@ Mcu.Package=LQFP100
 Mcu.Pin0=VP_SYS_VS_Systick
 Mcu.PinsNb=1
 Mcu.ThirdPartyNb=0
+Mcu.UserConstants=
 Mcu.UserName=STM32F407VETx
 MxCube.Version=6.11.1
 MxDb.Version=DB.6.0.111
@@ -31,7 +32,6 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PCC.Seq0=0
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
